# apertium-nno-nob

./: .bash_profile  .gitattributes  .gitignore  .travis.yml  ACKNOWLEDGEMENTS  AUTHORS  BRANCH_STATUS.md  CITATION.cff  ChangeLog  Makefile.am  NEWS  OBT-to-Apertium.sh  README  SYNTAX_STATUS.md  Testenorge.tmx  alt.xsl  apertium-gen-prefs  apertium-nn-nb.nb-nn.rlx  apertium-nn-nb.nb-nn.syn.rlx  apertium-nn-nb.nb-nn.t1x  apertium-nn-nb.nb-nn.t2x  apertium-nn-nb.nb-nn.t3x  apertium-nn-nb.nb.dix  apertium-nn-nb.nb.tsx  apertium-nn-nb.nn-nb.dix  apertium-nn-nb.nn-nb.rlx  apertium-nn-nb.nn-nb.syn.rlx  apertium-nn-nb.nn-nb.t1x  apertium-nn-nb.nn.dix  apertium-nn-nb.nn.rle  apertium-nn-nb.nn.tsx  apertium-nno-nob.capstag.lsx  apertium-nno-nob.laws.txt  apertium-nno-nob.nno-nob.lrx  apertium-nno-nob.nno-nob.t1x  apertium-nno-nob.nno-nob.t2x  apertium-nno-nob.nno-nob.t3x  apertium-nno-nob.nno.lsx  apertium-nno-nob.nob-nno-postlex.lsx  apertium-nno-nob.nob-nno.arx  (+47 more)
dev/: 1441.apertium.snt  1441.nb.snt  1441.nn.snt  1441.nyno.snt  500.apertium.snt  500.apertium.testset  500.nb.snt  500.nn.snt  500.nyno.result  500.nyno.snt  500.wiki.snt  @.adj.org  Makefile  OBT-to-Apertium.sh  ReTraTos.KDE4.dix  ReTraTos.noreg.no.dix  abbr.txt  add-words  add-words-inflected.awk  add-words.awk  adj-sint-consistency.sh  analyse-all-stages.sh  apertium-nn-nb.multiwords.t1x  bidix.adv  bidix.nouns  bidix.pr  bidix.vblex  bm.adj.dix  bm.adj.xml  cappelen  clean-break  corpdiff  coverage.sh  dansknorsk-høgnorsk-todo.dix  dictionary-trimmer.py  dix-nn-nb.el  dix-nno-nob.el  genitive-prepositions  genitive-prepositions-manual-additions.t1x.diff  genitive-prepositions-new-unmerged.t1x  (+43 more)
dev/archive/: ReTraTos.KDE4.dix  ReTraTos.noreg.no.dix  inc-Nordlys2000-not-in-dix.csv
dev/cg-unigrams/: cg-unigrams.sh  splitambig.py  streamparser.py
dev/current-OBT/: README  bm_morf.cg  bm_synt.cg  nn_morf.cg  nn_synt.cg
dev/ntb/: articles.gold.nno  articles.nob-nno.20181013  articles.nob-nno.20181015  articles.nob-nno.20181016  articles.nob-nno.20181029  articles.nob-nno.20181113  articles.nob-nno.20190119  articles.orig.nob
dev/ordbokene/: json-paradigm-to-tsv  match-apertium-paradigms
dev/testvoc/: Makefile  bidix-unknowns.sh  generation.sh  inconsistency.sh  nno-nob.inconsistency.sh  nob-nno.inconsistency.sh  streamparser.py  test-ngrams.sh
documentation/: about_optional_word_forms.md  adjective_agreement_and_syntax.md  current_dev_practices.md
freerbmt09_nnnb/: Makefile  apertium.bib  freerbmt09.sty  freerbmt09_nnnb.bib  freerbmt09_nnnb.org  freerbmt09_nnnb.tex  linguex.sty  linguho.sty  notes.org
freerbmt09_nnnb/eval/: 00readme.bleu.txt  1441.nn.snt  500.apertium.result  500.nb.snt  500.nyno.testset  CG-errors.txt  bleu.pl  noreg.no-nx.r15236.snt  noreg.no-nx.r15236.test  testnn
t/: README.org  apertium-eval-translator.pl  beam-eval-until-stable  bidix-sanity  cappelen  config.sh  hash-count  latest-pending.results  latest-regression.results  motvariant  pending-tests  progression  regression-tests  update-latest  wer-loss  wiki-tests
t/ntb/: articles.gold.nno  articles.nob-nno.20181014  articles.nob-nno.20181025  articles.nob-nno.20181031  articles.nob-nno.20181119  articles.nob-nno.20181216  articles.nob-nno.20191125  articles.nob-nno.20200124  articles.nob-nno.20200203  articles.nob-nno.20200514  articles.nob-nno.20210322  articles.nob-nno.mt-latest  articles.orig.nob
test/: nno-nob-chunker-output.txt  nno-nob-disam-output.txt  nno-nob-generator-output.txt  nno-nob-input.txt  nno-nob-interchunk-expected.txt  nno-nob-interchunk-output.txt  nno-nob-lex-output.txt  nno-nob-morph-expected.txt  nno-nob-morph-output.txt  nno-nob-pending-biltrans-output.txt  nno-nob-pending-chunker-output.txt  nno-nob-pending-disam-expected.txt  nno-nob-pending-disam-output.txt  nno-nob-pending-generator-output.txt  nno-nob-pending-input.txt  nno-nob-pending-interchunk-expected.txt  nno-nob-pending-interchunk-output.txt  nno-nob-pending-lex-expected.txt  nno-nob-pending-morph-output.txt  nno-nob-pending-postchunk-expected.txt  nno-nob-pending-postchunk-output.txt  nno-nob-pending-postgen-gold.txt  nno-nob-pending-pretransfer-output.txt  nno-nob-pending-tagger-expected.txt  nno-nob-postchunk-output.txt  nno-nob-pretransfer-expected.txt  nno-nob-pretransfer-output.txt  nno-nob-regression-biltrans-expected.txt  nno-nob-regression-biltrans-output.txt  nno-nob-regression-chunker-output.txt  nno-nob-regression-disam-output.txt  nno-nob-regression-generator-output.txt  nno-nob-regression-input.txt  nno-nob-regression-interchunk-output.txt  nno-nob-regression-lex-output.txt  nno-nob-regression-morph-expected.txt  nno-nob-regression-morph-output.txt  nno-nob-regression-postchunk-expected.txt  nno-nob-regression-postchunk-output.txt  nno-nob-regression-pretransfer-expected.txt  (+88 more)
test/expected/: nno-nob-biltrans.txt  nno-nob-disam.txt  (+57 more)
tests/: advl-nob-nno_e.input.txt  antall-nob-nno_e.input.txt  bevisst-nob-nno_e.all.gold.txt  bevisst-nob-nno_e.input.txt  bringe-nob-nno_e.all.gold.txt  bringe-nob-nno_e.input.txt  cappelen-norm-nob-nno_cappelen.all.gold.txt  cappelen-norm-nob-nno_cappelen.input.txt  caps-nob-nno_e.all.gold.txt  caps-nob-nno_e.input.txt  den-peikande-nob-nno_e.all.gold.txt  den-peikande-nob-nno_e.input.txt  ethvert-nob-nno_e.input.txt  for_skuld-nob-nno_e.input.txt  forbinde-nob-nno_e.input.txt  genitiv-nob-nno_e.input.txt  hvor-nob-nno_e.all.gold.txt  hvor-nob-nno_e.input.txt  landet-nob-nno_e.input.txt  meget-nob-nno_e.all.gold.txt  meget-nob-nno_e.input.txt  middel-nob-nno_e.input.txt  motvariant-nob-nno_motvariant.input.txt  noen2-nob-nno_e.all.gold.txt  noen2-nob-nno_e.input.txt  nok_en-nob-nno_e.all.gold.txt  nok_en-nob-nno_e.input.txt  norm-17-kjønn-nob-nno_e.input.txt  norm-9gk-j-nob-nno_e.input.txt  norm-nob-nno_e.all.gold.txt  norm-nob-nno_e.input.txt  oeyeblikk-nob-nno_e.input.txt  oppgi-nob-nno_e.input.txt  parverb-nob-nno_e.input.txt  passiv-nob-nno_e.all.gold.txt  passiv-nob-nno_e.input.txt  possessiv1-nob-nno_e.all.gold.txt  possessiv1-nob-nno_e.input.txt  pp-nob-nno_e.all.gold.txt  pp-nob-nno_e.input.txt  (+23 more)
(+77 files in other folders)
